# ip_updater

./: .gitignore  Cargo.toml  README.md  compose.yml  dockerfile  flake.nix
.cargo/: config.toml
.github/: build.yml
.github/workflows/: build.yml
src/: main.rs
