[package]
name = "ip_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { path = "/opt/projects/reqwest", version = ">=0.11.22", features = ["blocking", "json"] }
# tokio = { version = ">=0.11.24", features = ["full"] }
serde_json = ">=1.0"
serde = { version =  ">=1.0", features = ["derive"] }
chrono = ">=0.4.33"
# base64 = ">=0.21"