[package]
name = "ip_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = ">=0.11.22", features = ["blocking", "json"] }
http = ">=1.1.0"
serde_json = ">=1.0"
serde = { version =  ">=1.0", features = ["derive"] }
chrono = ">=0.4.33"
log = ">=0.4.21"
log4rs = ">=1.3.0"