[package]
name = "ip_updater"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = ">=0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
http = ">=1.3.0"
serde_json = ">=1.0.142"
serde = { version =  ">=1.0.219", features = ["derive"] }
chrono = ">=0.4.41"
log = ">=0.4.27"
log4rs = ">=1.3.0"
once_cell = ">=1.21.3"
